--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>RevStream</title>
     </head>
     <body>
-        <p>Further monetize your journey</p>
+        <p>Further monetize your journey!</p>
     </body>
     <script async defer src="https://play.adtonos.com/attc-CTHef3bgvYyDse38i.min.js"></script>
 </html>
