--- a/index.html
+++ b/index.html
@@ -7,4 +7,11 @@
         <p>Further monetize your journey!</p>
     </body>
     <script async defer src="https://play.adtonos.com/attc-CTHef3bgvYyDse38i.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vast-player@0.2/dist/vast-player.min.js"></script>
+    <script>
+        console.log("dad")
+        var player = new window.VASTPlayer(document.getElementById('container'));
+        player.load('https://www.myadserver.com/mytag');
+
+    </script>
 </html>
