--- a/revstream.html
+++ b/revstream.html
@@ -172,7 +172,7 @@
     </header>
 
     <div id="container"></div>
-        <script async defer>
+        <!-- <script async defer>
             (async function(VASTPlayer) {
                    'use strict';
    
@@ -201,7 +201,7 @@
                        setTimeout(function() { throw reason; }, 0);
                    });
                }(window.VASTPlayer));
-       </script>
+       </script> -->
 
     <main>
         <section class="hero">
@@ -267,6 +267,6 @@
             </ul>
         </div>
     </footer>
-    <script async defer src="https://play.adtonos.com/attc-CTHef3bgvYyDse38i.min.js"></script>
+    <!-- <script async defer src="https://play.adtonos.com/attc-CTHef3bgvYyDse38i.min.js"></script> -->
 </body>
 </html>
